
### Tools:

- #8645, #10363: ocamldoc: escape `<`, `>`, and `&` in html backend.
  (Florian Angeletti, report by Wim Lewis, review by Gabriel Scherer)

- #10139: Remove confusing navigation bar from stdlib documentation.
  Adds a -nonavbar option to ocamldoc, and uses it to improve navigation within
  the reference manual.
  (John Whitington, review by David Allsopp)

### Manual and documentation:

- #10247: Add initial tranche of examples to reference manual.
  Adds some eighty examples to the reference manual, principally to the
  expressions and patterns sections.
  (John Whitington, review by Xavier Leroy, Gabriel Scherer, @Fourchaux, and
  Florian Angeletti)

- #9786, #10181: improved documentation of Unix.{in,out}_channel_of_descr
  with respect to closing.
  (Xavier Leroy, report by Jacques-Henri Jourdan, review by Guillaume
   Munch-Maccagnoni, Gabriel Scherer, Jacques-Henri Jourdan)

- #10139: Remove confusing navigation bar from stdlib documentation.
  Removes the 'Up', 'Previous' and 'Next' links from the top of each standard
  library module's documentation.
  (John Whitington, review by David Allsopp)

- #1351: Document `-output-complete-obj` option in the manual.
  (François Bobot, Nicolás Ojeda Bär, review by Daniel Bünzli and Damien
  Doligez)

- #9987, #9988, #9996, #9997: add an odoc mode for the documentation
  of the standard library and compiler library
  (Florian Angeletti, review by David Allsopp, Sébastien Hinderer,
   and Gabriel Scherer)

- #9632: Document incremental build solutions with opam
  (Vincent Laviron, review by Daniel Bünzli and Gabriel Scherer)

### Compiler user-interface and warnings:

- #1737, #2092, #7852, #7859, #10405, #10417: Update locations during
  destructive substitutions
  (Thomas Refis, review by Gabriel Radanne, report by Hugo Heuzard)

- #2245: Improve error message for link order error in bytecode
  (Pierre Chambart, review by Jérémie Dimino and Gabriel Scherer)
