@@ -156,11 +156,12 @@ let prepare ppf =
       Format.fprintf ppf "Uncaught exception: %s\n" (Printexc.to_string x);
       false
 
-(* If [name] is "", then the "file" is stdin treated as a script file. *)
-let file_argument name =
+let input_argument name =
+  let filename = Toploop.filename_of_input name in
   let ppf = Format.err_formatter in
-  if Filename.check_suffix name ".cmo" || Filename.check_suffix name ".cma"
-  then preload_objects := name :: !preload_objects
+  if Filename.check_suffix filename ".cmo"
+          || Filename.check_suffix filename ".cma"
+  then preload_objects := filename :: !preload_objects
   else if is_expanded !current then begin
     (* Script files are not allowed in expand options because otherwise the
        check in override arguments may fail since the new argv can be larger
@@ -168,7 +169,7 @@ let file_argument name =
     *)
     Printf.eprintf "For implementation reasons, the toplevel does not support\
    \ having script files (here %S) inside expanded arguments passed through the\
-   \ -args{,0} command-line option.\n" name;
+   \ -args{,0} command-line option.\n" filename;
     raise (Compenv.Exit_with_status 2)
   end else begin
       let newargs = Array.sub !argv !current
@@ -181,6 +182,7 @@ let file_argument name =
       else raise (Compenv.Exit_with_status 2)
     end
 
+let file_argument x = input_argument (Toploop.File x)
 
 let wrap_expand f s =
   let start = !current in
@@ -190,10 +192,11 @@ let wrap_expand f s =
 
 module Options = Main_args.Make_bytetop_options (struct
     include Main_args.Default.Topmain
-    let _stdin () = file_argument ""
+    let _stdin () = input_argument Toploop.Stdin
     let _args = wrap_expand Arg.read_arg
     let _args0 = wrap_expand Arg.read_arg0
     let anonymous s = file_argument s
+    let _eval s = input_argument (Toploop.String  s)
 end)
 
 let () =
